video_server/ridgerun_plugins/gstreamer/gst/parse/grammar.output
Terminals unused in grammar

   '.'
   '!'
   '='
   ':'


Grammar

    0 $accept: graph $end

    1 element: IDENTIFIER
    2        | element ASSIGNMENT

    3 elementary: element
    4           | bin

    5 chain: openchain

    6 openchain: elementary pads
    7          | openchain link pads elementary pads

    8 link: LINK
    9     | LINK_ALL

   10 pads: %empty
   11     | PADREF morepads

   12 morepads: %empty
   13         | ',' IDENTIFIER morepads

   14 chain: openchain link PARSE_URL

   15 openchain: PARSE_URL

   16 chain: openchain link reference

   17 openchain: reference

   18 reference: REF morepads

   19 chainlist: %empty
   20          | chainlist chain
   21          | chainlist error

   22 assignments: %empty
   23            | ASSIGNMENT assignments

   24 binopener: '('
   25          | BINREF

   26 bin: binopener assignments chainlist ')'

   27 graph: chainlist


Terminals, with rules where they appear

$end (0) 0
'!' (33)
'(' (40) 24
')' (41) 26
',' (44) 13
'.' (46)
':' (58)
'=' (61)
error (256) 21
PARSE_URL (258) 14 15
IDENTIFIER (259) 1 13
REF (260) 18
PADREF (261) 11
BINREF (262) 25
ASSIGNMENT (263) 2 23
LINK (264) 8
LINK_ALL (265) 9


Nonterminals, with rules where they appear

$accept (18)
    on left: 0
element (19)
    on left: 1 2, on right: 2 3
elementary (20)
    on left: 3 4, on right: 6 7
chain (21)
    on left: 5 14 16, on right: 20
openchain (22)
    on left: 6 7 15 17, on right: 5 7 14 16
link (23)
    on left: 8 9, on right: 7 14 16
pads (24)
    on left: 10 11, on right: 6 7
morepads (25)
    on left: 12 13, on right: 11 13 18
reference (26)
    on left: 18, on right: 16 17
chainlist (27)
    on left: 19 20 21, on right: 20 21 26 27
assignments (28)
    on left: 22 23, on right: 23 26
binopener (29)
    on left: 24 25, on right: 26
bin (30)
    on left: 26, on right: 4
graph (31)
    on left: 27, on right: 0


State 0

    0 $accept: . graph $end

    $default  reduce using rule 19 (chainlist)

    chainlist  go to state 1
    graph      go to state 2


State 1

   20 chainlist: chainlist . chain
   21          | chainlist . error
   27 graph: chainlist .

    error       shift, and go to state 3
    PARSE_URL   shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    REF         shift, and go to state 6
    BINREF      shift, and go to state 7
    '('         shift, and go to state 8

    $end  reduce using rule 27 (graph)

    element     go to state 9
    elementary  go to state 10
    chain       go to state 11
    openchain   go to state 12
    reference   go to state 13
    binopener   go to state 14
    bin         go to state 15


State 2

    0 $accept: graph . $end

    $end  shift, and go to state 16


State 3

   21 chainlist: chainlist error .

    $default  reduce using rule 21 (chainlist)


State 4

   15 openchain: PARSE_URL .

    $default  reduce using rule 15 (openchain)


State 5

    1 element: IDENTIFIER .

    $default  reduce using rule 1 (element)


State 6

   18 reference: REF . morepads

    ','  shift, and go to state 17

    $default  reduce using rule 12 (morepads)

    morepads  go to state 18


State 7

   25 binopener: BINREF .

    $default  reduce using rule 25 (binopener)


State 8

   24 binopener: '(' .

    $default  reduce using rule 24 (binopener)


State 9

    2 element: element . ASSIGNMENT
    3 elementary: element .

    ASSIGNMENT  shift, and go to state 19

    $default  reduce using rule 3 (elementary)


State 10

    6 openchain: elementary . pads

    PADREF  shift, and go to state 20

    $default  reduce using rule 10 (pads)

    pads  go to state 21


State 11

   20 chainlist: chainlist chain .

    $default  reduce using rule 20 (chainlist)


State 12

    5 chain: openchain .
    7 openchain: openchain . link pads elementary pads
   14 chain: openchain . link PARSE_URL
   16      | openchain . link reference

    LINK      shift, and go to state 22
    LINK_ALL  shift, and go to state 23

    $default  reduce using rule 5 (chain)

    link  go to state 24


State 13

   17 openchain: reference .

    $default  reduce using rule 17 (openchain)


State 14

   26 bin: binopener . assignments chainlist ')'

    ASSIGNMENT  shift, and go to state 25

    $default  reduce using rule 22 (assignments)

    assignments  go to state 26


State 15

    4 elementary: bin .

    $default  reduce using rule 4 (elementary)


State 16

    0 $accept: graph $end .

    $default  accept


State 17

   13 morepads: ',' . IDENTIFIER morepads

    IDENTIFIER  shift, and go to state 27


State 18

   18 reference: REF morepads .

    $default  reduce using rule 18 (reference)


State 19

    2 element: element ASSIGNMENT .

    $default  reduce using rule 2 (element)


State 20

   11 pads: PADREF . morepads

    ','  shift, and go to state 17

    $default  reduce using rule 12 (morepads)

    morepads  go to state 28


State 21

    6 openchain: elementary pads .

    $default  reduce using rule 6 (openchain)


State 22

    8 link: LINK .

    $default  reduce using rule 8 (link)


State 23

    9 link: LINK_ALL .

    $default  reduce using rule 9 (link)


State 24

    7 openchain: openchain link . pads elementary pads
   14 chain: openchain link . PARSE_URL
   16      | openchain link . reference

    PARSE_URL  shift, and go to state 29
    REF        shift, and go to state 6
    PADREF     shift, and go to state 20

    $default  reduce using rule 10 (pads)

    pads       go to state 30
    reference  go to state 31


State 25

   23 assignments: ASSIGNMENT . assignments

    ASSIGNMENT  shift, and go to state 25

    $default  reduce using rule 22 (assignments)

    assignments  go to state 32


State 26

   26 bin: binopener assignments . chainlist ')'

    $default  reduce using rule 19 (chainlist)

    chainlist  go to state 33


State 27

   13 morepads: ',' IDENTIFIER . morepads

    ','  shift, and go to state 17

    $default  reduce using rule 12 (morepads)

    morepads  go to state 34


State 28

   11 pads: PADREF morepads .

    $default  reduce using rule 11 (pads)


State 29

   14 chain: openchain link PARSE_URL .

    $default  reduce using rule 14 (chain)


State 30

    7 openchain: openchain link pads . elementary pads

    IDENTIFIER  shift, and go to state 5
    BINREF      shift, and go to state 7
    '('         shift, and go to state 8

    element     go to state 9
    elementary  go to state 35
    binopener   go to state 14
    bin         go to state 15


State 31

   16 chain: openchain link reference .

    $default  reduce using rule 16 (chain)


State 32

   23 assignments: ASSIGNMENT assignments .

    $default  reduce using rule 23 (assignments)


State 33

   20 chainlist: chainlist . chain
   21          | chainlist . error
   26 bin: binopener assignments chainlist . ')'

    error       shift, and go to state 3
    PARSE_URL   shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    REF         shift, and go to state 6
    BINREF      shift, and go to state 7
    '('         shift, and go to state 8
    ')'         shift, and go to state 36

    element     go to state 9
    elementary  go to state 10
    chain       go to state 11
    openchain   go to state 12
    reference   go to state 13
    binopener   go to state 14
    bin         go to state 15


State 34

   13 morepads: ',' IDENTIFIER morepads .

    $default  reduce using rule 13 (morepads)


State 35

    7 openchain: openchain link pads elementary . pads

    PADREF  shift, and go to state 20

    $default  reduce using rule 10 (pads)

    pads  go to state 37


State 36

   26 bin: binopener assignments chainlist ')' .

    $default  reduce using rule 26 (bin)


State 37

    7 openchain: openchain link pads elementary pads .

    $default  reduce using rule 7 (openchain)
